--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,31 @@
 ---
 layout: default
 ---
-<div class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
-
-  <article class="post-content">
+<article class="blog-post">
+    <header>
+        <h1 class="header"><a href="{{ post.url | prepend: site.baseurl }}">{{ page.title }}</a></h1>
+        <div class="subheader">
+            <time datetime="{{ page.date }}" pubdate>{{ page.date | date: "%-d %B %Y" }}</time>   
+        </div>
+        <!--<ul class="social">
+            <li><div class="fb-like" data-href="{{ post.url | prepend: site.baseurl }}" data-send="true" data-show-faces="false"></div></li>
+        </ul> -->
+        <br class="clearer" />
+    </header>
     {{ content }}
-  </article>
+</article>
 
-</div>
+<div id="disqus_thread"></div>
+
+<script>
+    //var disqus_developer = parseInt(@(Request.IsLocal ? 1 : 0));
+    var disqus_shortname = "andymehalick";
+    var disqus_identifier = "{% if page.post_id %}{{ page.post_id }}{% else %}{{ page.url }}{% endif %}";
+    var disqus_title = "{{ page.title }}";
+    (function () {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
