--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,236 +1,205 @@
-/**
- * Site header
- */
-.site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
+.page-width {
+    width: 960px;
+    margin: 0 auto;
+}
+
+nav {
+    background: black url('/content/images/navigation-background.png') bottom center repeat-x;
     min-height: 56px;
-
-    // Positioning context for the mobile navigation icon
-    position: relative;
+    margin-bottom: 15px;
 }
 
-.site-title {
-    font-size: 26px;
-    line-height: 56px;
-    letter-spacing: -1px;
-    margin-bottom: 0;
-    float: left;
-
-    &,
-    &:visited {
-        color: $grey-color-dark;
-    }
-}
-
-.site-nav {
-    float: right;
-    line-height: 56px;
-
-    .menu-icon {
-        display: none;
+    nav ul {
+        list-style: none;
     }
 
-    .page-link {
-        color: $text-color;
-        line-height: $base-line-height;
-
-        // Gaps between nav items, but not on the first one
-        &:not(:first-child) {
-            margin-left: 20px;
+        nav ul li {
+            float: left;
+            margin: 0 12px 0 0;
+            padding-left: 18px;
+            background: transparent url('/content/images/nav-bullet.png') left center no-repeat;
         }
-    }
 
-    @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: 30px;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
-
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
-
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
+            nav ul li:first-child {
+                background: none;
+                padding-left: 0;
             }
-        }
 
-        .trigger {
-            clear: both;
-            display: none;
-        }
-
-        &:hover .trigger {
+        nav ul a {
             display: block;
-            padding-bottom: 5px;
+            padding: 16px 0;
+            color: white;
+            font-size: 0.8em;
+            text-decoration: none;
+            text-transform: uppercase;
+            letter-spacing: 0.2em;
         }
 
-        .page-link {
-            display: block;
-            padding: 5px 10px;
+            nav ul a:first-letter {
+                font-size: 1.2em;
+            }
+
+            nav ul a:hover,
+            nav ul a.selected {
+                color: #BFD9E5;
+            }
+
+    nav #rss {
+        float: right;
+        margin-top: 10px;
+    }
+
+#site-header h1,
+#site-header h2 {
+    font-weight: normal;
+    text-shadow: 2px 2px 5px #999;
+}
+
+#site-header h1 {
+    font-family: 'Atomic Age', serif;
+    font-size: 2em;
+}
+
+#site-header h2 {
+    font-size: 1.2em;
+}
+
+#main {
+    background: white;
+    min-height: 400px;
+    border-radius: 10px;
+    margin-bottom: 2em;
+}
+
+    #main #content {
+        padding: 1em 0;
+    }
+
+        #main #content ul,
+        #main #content ol {
+            margin: 0 2em;
         }
-    }
+
+#sidebar {
+    float: right;
+    margin: 0 0 1em 1em;
 }
 
-
-
-/**
- * Site footer
- */
-.site-footer {
-    border-top: 1px solid $grey-color-light;
-    padding: $spacing-unit 0;
+#site-footer {
+    font-size: 0.8em;
+    text-align: center;
+    margin-bottom: 2em;
 }
 
-.footer-heading {
-    font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
-}
-
-.contact-list,
-.social-media-list {
-    list-style: none;
-    margin-left: 0;
-}
-
-.footer-col-wrapper {
-    font-size: 15px;
-    color: $grey-color;
-    margin-left: -$spacing-unit / 2;
-    @extend %clearfix;
-}
-
-.footer-col {
-    float: left;
-    margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
-}
-
-.footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width:         calc(35% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width:         calc(45% - (#{$spacing-unit} / 2));
-}
-
-@include media-query($on-laptop) {
-    .footer-col-1,
-    .footer-col-2 {
-        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-        width:         calc(50% - (#{$spacing-unit} / 2));
+    #site-footer a {
+        color: #333 !important;
+        text-decoration: none;
     }
 
-    .footer-col-3 {
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
+/* attributes */
+
+.header {
+    font-size: 1.6em;
+    margin-bottom: 1em;
+}
+
+.padded {
+    padding: 15px;
+}
+
+.clearer {
+    clear: both;
+}
+
+a.colorless {
+    color: inherit;
+}
+
+/* blog post items */
+
+.blog-post {
+    margin-bottom: 1em;
+}
+
+.blog-post header {
+    margin: 0 0 0.5em 0;
+}
+
+    .blog-post header h1 {
+        font-size: 1.8em;
+        margin-bottom: 0.2em;
     }
-}
 
-@include media-query($on-palm) {
-    .footer-col {
-        float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
-}
-
-
-
-/**
- * Page content
- */
-.page-content {
-    padding: $spacing-unit 0;
-}
-
-.page-heading {
-    font-size: 20px;
-}
-
-.post-list {
-    margin-left: 0;
-    list-style: none;
-
-    > li {
-        margin-bottom: $spacing-unit;
-    }
-}
-
-.post-meta {
-    font-size: $small-font-size;
-    color: $grey-color;
-}
-
-.post-link {
-    display: block;
-    font-size: 24px;
-}
-
-
-
-/**
- * Posts
- */
-.post-header {
-    margin-bottom: $spacing-unit;
-}
-
-.post-title {
-    font-size: 42px;
-    letter-spacing: -1px;
-    line-height: 1;
-
-    @include media-query($on-laptop) {
-        font-size: 36px;
-    }
-}
-
-.post-content {
-    margin-bottom: $spacing-unit;
-
-    h2 {
-        font-size: 32px;
-
-        @include media-query($on-laptop) {
-            font-size: 28px;
+        .blog-post header h1 a {
+            color: #333;
+            text-decoration: none;
         }
+
+            .blog-post header h1 a:hover {
+                text-decoration: underline;
+            }
+
+.blog-post .subheader {
+    margin-bottom: 1em;
+    font-size: 1em;
+    color: #aaa;
+}
+
+.blog-post .social {
+    margin: 0 !important;
+}
+
+    .blog-post .social li {
+        list-style-type: none;
+        float: left;
+        padding: 0 5px;
+        height: 29px;
     }
 
-    h3 {
-        font-size: 26px;
-
-        @include media-query($on-laptop) {
-            font-size: 22px;
+        .blog-post .social li:first-child {
+            padding-left: 0;
         }
+
+.blog-post h2,
+.blog-post h3,
+.blog-post-h4 {
+    margin-bottom: 1em;
+}
+
+/* media specific */
+
+@media all and (min-width: 960px) {
+    #main {
+        background: white url('/content/images/main-background.png') center center;
+    }
+}
+
+@media screen and (max-device-width: 480px) {
+    nav ul a {
+        font-size: 1.6em;
     }
 
-    h4 {
-        font-size: 20px;
-
-        @include media-query($on-laptop) {
-            font-size: 18px;
-        }
+    #site-header h1 {
+        font-size: 4em;
     }
+
+    #site-header h2 {
+        font-size: 1.8em;
+    }
+
+    p {
+        font-size: 1.4em;
+    }
+}
+
+#post-list {
+	list-style-type: square;
+	
+	li {
+		margin-bottom: 0.5em;
+	}
+	
+	.post-date {
+		color: #999;
+	}
 }
