added existing blog posts

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -69,16 +69,19 @@ nav {
     min-height: 400px;
     border-radius: 10px;
     margin-bottom: 2em;
-}
-
-    #main #content {
+    
+    #content {
         padding: 1em 0;
-    }
-
-        #main #content ul,
-        #main #content ol {
-            margin: 0 2em;
+        
+        ul, ol {
+            margin: 0 2em 1em 2em;
         }
+        
+        iframe {
+            margin-bottom: 1em;
+        }
+    }
+}
 
 #sidebar {
     float: right;
