--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,14 +4,10 @@ layout: default
 
 <article class="blog-post">
     <header>
-        <h1 class="header"><a href="{{ post.url | prepend: site.baseurl }}">{{ page.title }}</a></h1>
+        <h1 class="header">{{ page.title }}</h1>
         <div class="subheader">
             <time datetime="{{ page.date }}" pubdate>{{ page.date | date: "%-d %B %Y" }}</time>   
         </div>
-        <!--<ul class="social">
-            <li><div class="fb-like" data-href="{{ post.url | prepend: site.baseurl }}" data-send="true" data-show-faces="false"></div></li>
-        </ul> -->
-        <br class="clearer" />
     </header>
     {{ content }}
 </article>
