--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,5 +1,7 @@
+@import "_variables.scss";
+
 .page-width {
-    width: 960px;
+    max-width: 960px;
     margin: 0 auto;
 }
 
@@ -29,14 +31,14 @@ nav {
             display: block;
             padding: 16px 0;
             color: white;
-            font-size: 0.8em;
+            font-size: 1.2rem;
             text-decoration: none;
             text-transform: uppercase;
             letter-spacing: 0.2em;
         }
 
             nav ul a:first-letter {
-                font-size: 1.2em;
+                font-size: 1.3em;
             }
 
             nav ul a:hover,
@@ -49,49 +51,40 @@ nav {
         margin-top: 10px;
     }
 
-#site-header h1,
-#site-header h2 {
-    font-weight: normal;
-    text-shadow: 2px 2px 5px #999;
-}
+#site-header {
+    
+    h1, h2 {
+        margin: 0 0 5px 0;
+        font-weight: normal;
+        text-shadow: 2px 2px 5px #999;
+    }
+    
+    h1 {
+        font-family: 'Atomic Age', serif;
+        font-size: 3.5rem;
+    }
 
-#site-header h1 {
-    font-family: 'Atomic Age', serif;
-    font-size: 2em;
-}
-
-#site-header h2 {
-    font-size: 1.2em;
+    h2 {
+        font-size: 1.2em;
+    }  
 }
 
 #main {
     background: white;
     min-height: 400px;
     border-radius: 10px;
-    margin-bottom: 2em;
-    
-    #content {
-        padding: 1em 0;
-        
-        ul, ol {
-            margin: 0 2em 1em 2em;
-        }
-        
-        iframe {
-            margin-bottom: 1em;
-        }
-    }
+    margin-bottom: 20px;
 }
 
 #sidebar {
     float: right;
-    margin: 0 0 1em 1em;
+    margin: 0 0 15px 15px;
 }
 
 #site-footer {
-    font-size: 0.8em;
+    font-size: 1.2rem;
     text-align: center;
-    margin-bottom: 2em;
+    margin-bottom: 20px;
 }
 
     #site-footer a {
@@ -100,11 +93,6 @@ nav {
     }
 
 /* attributes */
-
-.header {
-    font-size: 1.6em;
-    margin-bottom: 1em;
-}
 
 .padded {
     padding: 15px;
@@ -121,52 +109,12 @@ a.colorless {
 /* blog post items */
 
 .blog-post {
-    margin-bottom: 1em;
-}
-
-.blog-post header {
-    margin: 0 0 0.5em 0;
-}
-
-    .blog-post header h1 {
-        font-size: 1.8em;
-        margin-bottom: 0.2em;
+    margin-bottom: 20px;
+    
+    .subheader {
+        margin-bottom: 15px;
+        color: #aaa;
     }
-
-        .blog-post header h1 a {
-            color: #333;
-            text-decoration: none;
-        }
-
-            .blog-post header h1 a:hover {
-                text-decoration: underline;
-            }
-
-.blog-post .subheader {
-    margin-bottom: 1em;
-    font-size: 1em;
-    color: #aaa;
-}
-
-.blog-post .social {
-    margin: 0 !important;
-}
-
-    .blog-post .social li {
-        list-style-type: none;
-        float: left;
-        padding: 0 5px;
-        height: 29px;
-    }
-
-        .blog-post .social li:first-child {
-            padding-left: 0;
-        }
-
-.blog-post h2,
-.blog-post h3,
-.blog-post-h4 {
-    margin-bottom: 1em;
 }
 
 /* media specific */
