moved site images to CDN

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,15 +9,9 @@ html {
 body {
     margin: 0;
     padding: 0;
-    background: transparent url('/content/images/page-background.png') center center;
+    background: transparent url('https://az808808.vo.msecnd.net/assets/page-background-635783262300817767.png') center center;
     font-family: Muli, sans-serif; 
     color: #333;
-    
-    > header,
-    > main, 
-    > footer {
-        font-size: 1.7rem;
-    }
 }
 
 h1, h2, h3, h4, h5, h6 {
