--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
-  
-  <body>
-  
-    {% include header.html %}
-  
-    <main id="main" class="page-width">
+{% include head.html %}
+
+<body>
+    
+    <nav>
+        <div class="page-width">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/contact/">Contact</a></li>
+            </ul>        
+            <a id="rss" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" title="Subscribe to RSS"><img src="https://az808808.vo.msecnd.net/assets/rss-icon-635783262057302689.png" alt="rss icon" width="32" height="32" /></a>
+        </div>
+    </nav> 
+    
+    <main class="page-width">
         <div class="padded">
-            <div id="sidebar">
-                <img src="/content/images/photo.jpg" alt="Andy Mehalick" width="140" height="170" />
+            <div id="site-photo">
+                <img src="https://az808808.vo.msecnd.net/assets/andy-mehalick-v1-280x280-635783259977684363.jpg" alt="Andy Mehalick" width="140" height="140" />
             </div>
-            <div id="site-header">
+            <header id="site-header">
                 <h1>Andy Mehalick</h1>
                 <h2>Software Architect, Engineer, Designer</h2>
                 <hr />
-            </div>
-            <div id="content">
-              
-              {{ content }}
-              
+            </header>
+            <div id="content">               
+                {{ content }}           
             </div>       
         </div>
     </main>
-  
-    {% include footer.html %}
-  
-    <div id="fb-root"></div>
-  
-  </body>
+    
+    <footer>
+        <div class="page-width">
+            All site design and development by <a class="colorless" rel="author" href="https://plus.google.com/113902592100905338618">Andy Mehalick</a>.
+        </div>
+    </footer>
+
+</body>
 
 </html>
