--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,8 @@ layout: default
 
 <article class="blog-post">
     <header>
-        <h1 class="header">{{ page.title }}</h1>
-        <div class="subheader">
-            <time datetime="{{ page.date }}" pubdate>{{ page.date | date: "%-d %B %Y" }}</time>   
-        </div>
+        <h1>{{ page.title }}</h1>
+        <h2><time datetime="{{ page.date }}" pubdate>{{ page.date | date: "%-d %B %Y" }}</time></h2>
     </header>
     {{ content }}
 </article>
