--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -77,6 +77,11 @@ main {
     #site-photo {
         float: right;
         margin: 0 0 15px 15px;
+        max-width: 70px;
+        
+        @media (min-width: 480px) {
+            max-width: 140px;
+        }
         
         > img {
             border-radius: 10px;
