--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,13 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/contact/">Contact</a></li>
             </ul>        
-            <a id="rss" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" title="Subscribe to RSS"><img src="https://az808808.vo.msecnd.net/assets/rss-icon-635783262057302689.png" alt="rss icon" width="32" height="32" /></a>
+            <a id="rss" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" title="Subscribe to RSS">
+                <span class="fa-stack fa-lg">
+                    <i class="fa fa-square fa-stack-2x"></i>
+                    <i class="fa fa-rss fa-stack-1x"></i>
+                </span>
+            </a>
+            <div class="clearfix"></div>
         </div>
     </nav> 
     
@@ -22,7 +28,7 @@
             </div>
             <header id="site-header">
                 <h1>Andy Mehalick</h1>
-                <h2>Software Architect, Engineer, Designer</h2>
+                <h2>Software Architect, Engineer, UX Designer</h2>
                 <hr />
             </header>
             <div id="content">               
@@ -33,7 +39,7 @@
     
     <footer>
         <div class="page-width">
-            All site design and development by <a class="colorless" rel="author" href="https://plus.google.com/113902592100905338618">Andy Mehalick</a>.
+            Site content and theme by <a rel="author" href="https://plus.google.com/113902592100905338618">Andy Mehalick</a> | Hosted with <a href="http://jekyllrb.com/">Jekyll</a> on <a href="http://azure.microsoft.com/en-us/">Microsoft Azure</a>
         </div>
     </footer>
 
