--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,9 +1,10 @@
 @import "_variables.scss";
 
-nav {
-    background: black url('https://az808808.vo.msecnd.net/assets/nav-background-635783262550005826.png') bottom center repeat-x;
-    min-height: 56px;
-    margin-bottom: 15px;
+nav { 
+    min-height: 50px;
+    margin-bottom: 20px;
+    background: black;
+    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.5);
     
     ul {
         list-style: none;
@@ -42,7 +43,15 @@ nav {
     
     #rss {
         float: right;
-        margin-top: 10px;
+        margin-top: 12px;    
+        
+        .fa-square {
+            color: #F78C28;
+        }
+        
+        .fa-rss {
+            color: white;
+        }
     }
 }
 
@@ -94,7 +103,8 @@ footer {
     text-align: center;
     margin-bottom: 20px;
 
-    a {
+    a, a:hover {
+        color: inherit;
         text-decoration: none;
     }
 }
@@ -102,7 +112,7 @@ footer {
 /* attributes */
 
 .page-width {
-    max-width: 990px;
+    max-width: 960px;
     margin: 0 auto;
     padding: 0 15px;
 }
@@ -111,8 +121,15 @@ footer {
     padding: 15px;
 }
 
-.clearer {
+.clearer,
+.clearfix {
     clear: both;
+}
+
+.clearfix:before,
+.clearfix:after {
+    content: " ";
+    display: table;
 }
 
 a.colorless {
