--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -58,14 +58,12 @@ hr {
     margin: 15px 0;
 }
 
-ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: square;
+ul, ol {
+    margin: 0 0 15px 0;
 }
 
-ol {
-    margin: 0 2em 1em 2em;
+ul {
+    list-style-type: square;
 }
 
 pre, code {
