--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,6 +7,8 @@ nav {
     box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.5);
     
     ul {
+        margin: 0;
+        padding: 0;
         list-style: none;
         
         li {
