--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,7 +4,7 @@ nav {
     min-height: 50px;
     margin-bottom: 20px;
     background: black;
-    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.5);
+    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.5);
     
     ul {
         margin: 0;
