changed RSS link back to Feedburner

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Atomic+Age:400|Muli:400,700">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="http://feeds.feedburner.com/AndyMehalick">
   <link rel="me" type="text/html" href="{{ site.google_plus }}">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <script type="text/javascript">
