--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/contact/">Contact</a></li>
             </ul>        
-            <a id="rss" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" title="Subscribe to RSS">
+            <a id="rss" href="http://feeds.feedburner.com/AndyMehalick" title="Subscribe to RSS">
                 <span class="fa-stack fa-lg">
                     <i class="fa fa-square fa-stack-2x"></i>
                     <i class="fa fa-rss fa-stack-1x"></i>
