added MySQL post

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -151,6 +151,11 @@ a.colorless {
         color: #aaa;
         }      
     }
+    
+    img {
+        display: block;
+        margin: 0 auto;
+    }
 }
 
 #post-list {
