updated to use andy.azureedge.net CDN

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     <main class="page-width">
         <div class="padded">
             <div id="site-photo">
-                <img src="https://az808808.vo.msecnd.net/assets/andy-mehalick-v1-280x280-635783259977684363.jpg" alt="Andy Mehalick" width="140" height="140" />
+                <img src="https://andy.azureedge.net/assets/andy-mehalick-v1-280x280-635783259977684363.jpg" alt="Andy Mehalick" width="140" height="140" />
             </div>
             <header id="site-header">
                 <h1>Andy Mehalick</h1>
