--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -16,13 +16,12 @@
   <meta property="og:site_name" content="{{ site.title }}">
   <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines }}{% else %}{{ site.description }}{% endif %}">
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Atomic+Age:400|Muli:400,700">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Atomic+Age:400|Muli:400,700">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="http://feeds.feedburner.com/AndyMehalick">
   <link rel="me" type="text/html" href="{{ site.google_plus }}">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-  <script type="text/javascript">
+  <script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
             (i[r].q = i[r].q || []).push(arguments);
