--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 {% include head.html %}
-
-<body>
-    
+<body>  
     <nav>
         <div class="page-width">
             <ul>
@@ -12,15 +9,11 @@
                 <li><a href="/contact/">Contact</a></li>
             </ul>        
             <a id="rss" href="http://feeds.feedburner.com/AndyMehalick" title="Subscribe to RSS">
-                <span class="fa-stack fa-lg">
-                    <i class="fa fa-square fa-stack-2x"></i>
-                    <i class="fa fa-rss fa-stack-1x"></i>
-                </span>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28"><style>.st0{fill:#F78C28;} .st1{fill:#FFFFFF;}</style><path class="st0" d="M0 0h28v28H0z"/><g><path class="st1" d="M18.2 9.8C14.4 6 9.4 3.9 4 3.9v4c4.3 0 8.4 1.7 11.4 4.7s4.7 7.1 4.7 11.4h4c0-5.4-2.1-10.4-5.9-14.2z"/><path class="st1" d="M3.9 10.6v4c5.2 0 9.5 4.2 9.5 9.5h4c0-7.5-6.1-13.5-13.5-13.5z"/><circle class="st1" cx="6.7" cy="21.3" r="2.8"/></g></svg> 
             </a>
             <div class="clearfix"></div>
         </div>
-    </nav> 
-    
+    </nav>  
     <main class="page-width">
         <div class="padded">
             <div id="site-photo">
@@ -35,14 +28,11 @@
                 {{ content }}           
             </div>       
         </div>
-    </main>
-    
+    </main> 
     <footer>
         <div class="page-width">
-            Site content and theme by <a rel="author" href="https://plus.google.com/113902592100905338618">Andy Mehalick</a> | Hosted with <a href="http://jekyllrb.com/">Jekyll</a> on <a href="http://azure.microsoft.com/en-us/">Microsoft Azure</a>
+            Site content and theme by <a rel="author" href="https://plus.google.com/113902592100905338618">Andy Mehalick</a> | Built with <a href="http://jekyllrb.com/">Jekyll</a> on <a href="http://azure.microsoft.com/en-us/">Microsoft Azure</a>
         </div>
     </footer>
-
 </body>
-
 </html>
