adding post content

--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -139,14 +139,14 @@ a.colorless {
 /* blog post items */
 
 .blog-post {
-    margin-bottom: 20px;
+    margin-bottom: 5.2rem;
     
     header {
         h2 {
-        margin-bottom: 15px;
-        font-size: 1.7rem;
-        font-weight: normal;
-        color: #aaa;
+            margin-bottom: 1.7rem;
+            font-size: 1.7rem;
+            font-weight: normal;
+            color: #aaa;
         }      
     }
     
