--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -32,6 +32,6 @@
     
     ga('create', 'UA-28045940-1', 'auto');
     ga('require', 'displayfeatures');
-    ga('send', 'pageview');    
+    //ga('send', 'pageview');    
   </script>
 </head>
