--- a/src/_sass/_base.scss
+++ b/src/_sass/_base.scss
@@ -27,7 +27,7 @@ h2 {
 }
 
 h3 {
-    font-size: 2.0rem;
+    font-size: 1.8rem;
 }
 
 p {
@@ -84,7 +84,9 @@ aside {
 
 pre, code {
     font-family: monospace;
-    line-height: 100%;
+    font-size: 1.6rem;
+    line-height: 125%;
+    overflow-x: auto;
 }
 
 pre.cmd {
