--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -22,16 +22,17 @@
   <link rel="me" type="text/html" href="{{ site.google_plus }}">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments);
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g;
-        m.parentNode.insertBefore(a, m);
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-    
-    ga('create', 'UA-28045940-1', 'auto');
-    ga('require', 'displayfeatures');
-    ga('send', 'pageview');    
+    if (document.location.host === "andy.mehalick.com") {
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments);
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g;
+            m.parentNode.insertBefore(a, m);
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-28045940-1', 'auto');
+        ga('require', 'displayfeatures');
+        ga('send', 'pageview');
+    }
   </script>
 </head>
