--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -13,13 +13,13 @@ layout: default
 <div id="disqus_thread"></div>
 
 <script>
-    //var disqus_developer = parseInt(@(Request.IsLocal ? 1 : 0));
-    var disqus_shortname = "andymehalick";
-    var disqus_identifier = "{% if page.post_id %}{{ page.post_id }}{% else %}{{ page.url }}{% endif %}";
-    var disqus_title = "{{ page.title }}";
-    (function () {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
+    if (document.location.host === "andy.mehalick.com") {
+        var disqus_identifier = "{% if page.post_id %}{{ page.post_id }}{% else %}{{ page.url }}{% endif %}";
+        var disqus_title = "{{ page.title }}";
+        (function () {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//andymehalick.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    }
 </script>
