--- a/src/_sass/_base.scss
+++ b/src/_sass/_base.scss
@@ -83,10 +83,10 @@ aside {
 } 
 
 pre, code {
-    font-family: monospace;
-    font-size: 1.6rem;
-    line-height: 125%;
-    overflow-x: auto;
+    font-family: Consolas, monaco, monospace;
+    font-size: 1.2rem;
+    line-height: normal;
+    overflow: auto;
 }
 
 pre.cmd {
@@ -130,4 +130,21 @@ img {
     display: inline-block;
     max-width: 100%;
     height: auto;
+}
+
+.image-lead {
+    position: relative;
+    height: 0;
+    overflow: hidden;
+    background: #f5f5f5 url('https://andy.azureedge.net/assets/picture-636302624825399264.svg') center center no-repeat;
+    background-size: 64px 64px;
+    padding-bottom: percentage(523/930);
+}
+
+.img-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
