--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -1,7 +1,6 @@
 <head itemscope itemref="http://schema.org/Blog">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" itemprop="author" content="Andy Mehalick">
   <meta name="copyright" itemprop="copyrightHolder" content="Andy Mehalick">
@@ -14,6 +13,8 @@
   <meta property="og:image" content="{{ site.image }}">
   <meta property="og:site_name" content="{{ site.title }}">
   <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines }}{% else %}{{ site.description }}{% endif %}">
+  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <link rel="dns-prefetch" href="//andy.azureedge.net">
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Atomic+Age:400|Muli:400,700">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
