add prism; add localization post update

--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -12,6 +12,11 @@ layout: default
 
 <div id="disqus_thread"></div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/prism.min.js" integrity="sha256-jc6y1s/Y+F+78EgCT/lI2lyU7ys+PFYrRSJ6q8/R8+o=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/plugins/line-numbers/prism-line-numbers.js" integrity="sha256-Iqd4m4d2q0jp2soWB0guIxt6LXCyqSQ2RkD5G/Pnd0g=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/plugins/normalize-whitespace/prism-normalize-whitespace.min.js" integrity="sha256-31Ef0tfMJHz4mcBYno6PKR2Iz5qPHPJLxIzej2AGl6c=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/components/prism-csharp.min.js" integrity="sha256-v1Nxmv1+jRfdNuwdLgHXmAzZwADayhxn95rA7sJAg0c=" crossorigin="anonymous"></script>
+
 <script>
     if (document.location.host === "andy.mehalick.com") {
         var disqus_identifier = "{% if page.post_id %}{{ page.post_id }}{% else %}{{ page.url }}{% endif %}";
