--- a/src/_sass/_base.scss
+++ b/src/_sass/_base.scss
@@ -84,19 +84,26 @@ aside {
 
 pre, code {
     font-family: Consolas, monaco, monospace;
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     line-height: normal;
     overflow: auto;
+
+    &[class*=language-] {
+        margin: 0 0 2.6rem 0;
+    }
+
+    &.language-csharp .token.operator {
+        color: white;
+        background: transparent;
+    }
 }
 
-pre.cmd {
-    margin: 15px 0;
-    padding: 8px;
-    font-size: 2.2rem;
-    color: #900;
-    background-color: #FAF2F2;
-    border: 1px solid #CC7F7F;
-    border-radius: 2px;
+:not(pre) > code {
+    background-color: rgba(27,31,35,.05);
+    border-radius: 3px;
+    font-size: 85%;
+    margin: 0;
+    padding: .2em .4em;
 }
 
 table.table {
@@ -147,4 +154,11 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.update {
+    padding: 15px;
+    margin-bottom: 2.6rem;
+    border: 2px solid #B71C1C;
+    background: #FFEBEE;
 }
